test-fixtures/machine-dsl-tests/tests/compile_fail/canonical_transition_rejects_string_input_identity.rs
use meerkat_machine_kernels::generated::meerkat;

fn main() {
    let state = meerkat::initial_state();
    let _ = meerkat::transition(&state, "RegisterSession".to_string(), &meerkat::EmptyContext);
}
