test-fixtures/machine-dsl-tests/tests/compile_fail/canonical_transition_rejects_string_input_identity.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/canonical_transition_rejects_string_input_identity.rs:5:41
  |
5 |     let _ = meerkat::transition(&state, "RegisterSession".to_string(), &meerkat::EmptyContext);
  |             -------------------         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Input`, found `String`
  |             |
  |             arguments to this function are incorrect
  |
note: function defined here
 --> $WORKSPACE/meerkat-machine-kernels/src/generated/meerkat.rs
  |
  | pub fn transition<C: Context>(
  |        ^^^^^^^^^^
